helm/echo-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: foo
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: foo
spec:
  ingressClassName: nginx
  rules:
    - host: echo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-service
                port:
                  number: 80
